[desktop] update JavaScript scripting to Rhino 1.7.7 (MPL 2.0)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@44776 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e