@@ -1,53 +1,29 @@
 /* -*- Mode: java; tab-width: 8; indent-tabs-mode: nil; c-basic-offset: 4 -*-
  *
- * ***** BEGIN LICENSE BLOCK *****
- * Version: MPL 1.1/GPL 2.0
- *
- * The contents of this file are subject to the Mozilla Public License Version
- * 1.1 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- * http://www.mozilla.org/MPL/
- *
- * Software distributed under the License is distributed on an "AS IS" basis,
- * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
- * for the specific language governing rights and limitations under the
- * License.
- *
- * The Original Code is Rhino code, released
- * May 6, 1999.
- *
- * The Initial Developer of the Original Code is
- * Netscape Communications Corporation.
- * Portions created by the Initial Developer are Copyright (C) 1997-1999
- * the Initial Developer. All Rights Reserved.
- *
- * Contributor(s):
- *   Norris Boyd
- *   Mike McCabe
- *   Igor Bukanov
- *
- * Alternatively, the contents of this file may be used under the terms of
- * the GNU General Public License Version 2 or later (the "GPL"), in which
- * case the provisions of the GPL are applicable instead of those above. If
- * you wish to allow use of your version of this file only under the terms of
- * the GPL and not to allow others to use your version of this file under the
- * MPL, indicate your decision by deleting the provisions above and replacing
- * them with the notice and other provisions required by the GPL. If you do
- * not delete the provisions above, a recipient may use your version of this
- * file under either the MPL or the GPL.
- *
- * ***** END LICENSE BLOCK ***** */
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 package org.mozilla.javascript;
 
+import org.mozilla.javascript.regexp.NativeRegExp;
+
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.Iterator;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.ListIterator;
+import java.util.NoSuchElementException;
+import java.util.Set;
 
 /**
  * This class implements the Array native object.
  * @author Norris Boyd
  * @author Mike McCabe
  */
-public class NativeArray extends IdScriptableObject
+public class NativeArray extends IdScriptableObject implements List
 {
     static final long serialVersionUID = 7331366857676127338L;
 
@@ -64,14 +40,14 @@ public class NativeArray extends IdScriptableObject
      */
 
     private static final Object ARRAY_TAG = "Array";
-    private static final Integer NEGATIVE_ONE = new Integer(-1);
+    private static final Integer NEGATIVE_ONE = Integer.valueOf(-1);
 
     static void init(Scriptable scope, boolean sealed)
     {
         NativeArray obj = new NativeArray(0);
         obj.exportAsJSClass(MAX_PROTOTYPE_ID, scope, sealed);
     }
-    
+
     static int getMaximumInitialCapacity() {
         return maximumInitialCapacity;
     }
@@ -117,10 +93,17 @@ public class NativeArray extends IdScriptableObject
     }
 
     @Override
+    protected void setInstanceIdAttributes(int id, int attr) {
+        if (id == Id_length) {
+            lengthAttr = attr;
+        }
+    }
+
+    @Override
     protected int findInstanceIdInfo(String s)
     {
         if (s.equals("length")) {
-            return instanceIdInfo(DONTENUM | PERMANENT, Id_length);
+            return instanceIdInfo(lengthAttr, Id_length);
         }
         return super.findInstanceIdInfo(s);
     }
@@ -149,44 +132,54 @@ public class NativeArray extends IdScriptableObject
         }
         super.setInstanceIdValue(id, value);
     }
-    
+
     @Override
     protected void fillConstructorProperties(IdFunctionObject ctor)
     {
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_join,
-                "join", 2);
+                "join", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reverse,
-                "reverse", 1);
+                "reverse", 0);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_sort,
-                "sort", 2);
+                "sort", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_push,
-                "push", 2);
+                "push", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_pop,
-                "pop", 2);
+                "pop", 0);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_shift,
-                "shift", 2);
+                "shift", 0);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_unshift,
-                "unshift", 2);
+                "unshift", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_splice,
                 "splice", 2);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_concat,
-                "concat", 2);
+                "concat", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_slice,
                 "slice", 2);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_indexOf,
-                "indexOf", 2);
+                "indexOf", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_lastIndexOf,
-                "lastIndexOf", 2);
+                "lastIndexOf", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_every,
-                "every", 2);
+                "every", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_filter,
-                "filter", 2);
+                "filter", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_forEach,
-                "forEach", 2);
+                "forEach", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_map,
-                "map", 2);
+                "map", 1);
         addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_some,
-                "some", 2);
+                "some", 1);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_find,
+                "find", 1);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_findIndex,
+                "findIndex", 1);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reduce,
+                "reduce", 1);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reduceRight,
+                "reduceRight", 1);
+        addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_isArray,
+                "isArray", 1);
         super.fillConstructorProperties(ctor);
     }
 
@@ -198,18 +191,18 @@ public class NativeArray extends IdScriptableObject
         switch (id) {
           case Id_constructor:    arity=1; s="constructor";    break;
           case Id_toString:       arity=0; s="toString";       break;
-          case Id_toLocaleString: arity=1; s="toLocaleString"; break;
+          case Id_toLocaleString: arity=0; s="toLocaleString"; break;
           case Id_toSource:       arity=0; s="toSource";       break;
           case Id_join:           arity=1; s="join";           break;
           case Id_reverse:        arity=0; s="reverse";        break;
           case Id_sort:           arity=1; s="sort";           break;
           case Id_push:           arity=1; s="push";           break;
-          case Id_pop:            arity=1; s="pop";            break;
-          case Id_shift:          arity=1; s="shift";          break;
+          case Id_pop:            arity=0; s="pop";            break;
+          case Id_shift:          arity=0; s="shift";          break;
           case Id_unshift:        arity=1; s="unshift";        break;
-          case Id_splice:         arity=1; s="splice";         break;
+          case Id_splice:         arity=2; s="splice";         break;
           case Id_concat:         arity=1; s="concat";         break;
-          case Id_slice:          arity=1; s="slice";          break;
+          case Id_slice:          arity=2; s="slice";          break;
           case Id_indexOf:        arity=1; s="indexOf";        break;
           case Id_lastIndexOf:    arity=1; s="lastIndexOf";    break;
           case Id_every:          arity=1; s="every";          break;
@@ -217,6 +210,10 @@ public class NativeArray extends IdScriptableObject
           case Id_forEach:        arity=1; s="forEach";        break;
           case Id_map:            arity=1; s="map";            break;
           case Id_some:           arity=1; s="some";           break;
+          case Id_find:           arity=1; s="find";           break;
+          case Id_findIndex:      arity=1; s="findIndex";      break;
+          case Id_reduce:         arity=1; s="reduce";         break;
+          case Id_reduceRight:    arity=1; s="reduceRight";    break;
           default: throw new IllegalArgumentException(String.valueOf(id));
         }
         initPrototypeMethod(ARRAY_TAG, id, s, arity);
@@ -249,16 +246,25 @@ public class NativeArray extends IdScriptableObject
               case ConstructorId_filter:
               case ConstructorId_forEach:
               case ConstructorId_map:
-              case ConstructorId_some: {
-                thisObj = ScriptRuntime.toObject(scope, args[0]);
-                Object[] newArgs = new Object[args.length-1];
-                for (int i=0; i < newArgs.length; i++)
-                    newArgs[i] = args[i+1];
-                args = newArgs;
+              case ConstructorId_some:
+              case ConstructorId_find:
+              case ConstructorId_findIndex:
+              case ConstructorId_reduce:
+              case ConstructorId_reduceRight: {
+                if (args.length > 0) {
+                    thisObj = ScriptRuntime.toObject(cx, scope, args[0]);
+                    Object[] newArgs = new Object[args.length-1];
+                    for (int i=0; i < newArgs.length; i++)
+                        newArgs[i] = args[i+1];
+                    args = newArgs;
+                }
                 id = -id;
                 continue again;
               }
-    
+
+              case ConstructorId_isArray:
+                return args.length > 0 && js_isArray(args[0]);
+
               case Id_constructor: {
                 boolean inNewExpr = (thisObj == null);
                 if (!inNewExpr) {
@@ -267,59 +273,64 @@ public class NativeArray extends IdScriptableObject
                 }
                 return jsConstructor(cx, scope, args);
               }
-    
+
               case Id_toString:
                 return toStringHelper(cx, scope, thisObj,
                     cx.hasFeature(Context.FEATURE_TO_STRING_AS_SOURCE), false);
-    
+
               case Id_toLocaleString:
                 return toStringHelper(cx, scope, thisObj, false, true);
-    
+
               case Id_toSource:
                 return toStringHelper(cx, scope, thisObj, true, false);
-    
+
               case Id_join:
                 return js_join(cx, thisObj, args);
-    
+
               case Id_reverse:
                 return js_reverse(cx, thisObj, args);
-    
+
               case Id_sort:
                 return js_sort(cx, scope, thisObj, args);
-    
+
               case Id_push:
                 return js_push(cx, thisObj, args);
-    
+
               case Id_pop:
                 return js_pop(cx, thisObj, args);
-    
+
               case Id_shift:
                 return js_shift(cx, thisObj, args);
-    
+
               case Id_unshift:
                 return js_unshift(cx, thisObj, args);
-    
+
               case Id_splice:
                 return js_splice(cx, scope, thisObj, args);
-    
+
               case Id_concat:
                 return js_concat(cx, scope, thisObj, args);
-    
+
               case Id_slice:
                 return js_slice(cx, thisObj, args);
-    
+
               case Id_indexOf:
-                return indexOfHelper(cx, thisObj, args, false);
-    
+                return js_indexOf(cx, thisObj, args);
+
               case Id_lastIndexOf:
-                return indexOfHelper(cx, thisObj, args, true);
-    
+                return js_lastIndexOf(cx, thisObj, args);
+
               case Id_every:
               case Id_filter:
               case Id_forEach:
               case Id_map:
               case Id_some:
+              case Id_find:
+              case Id_findIndex:
                 return iterativeMethod(cx, id, scope, thisObj, args);
+              case Id_reduce:
+              case Id_reduceRight:
+                return reduceMethod(cx, id, scope, thisObj, args);
             }
             throw new IllegalArgumentException(String.valueOf(id));
         }
@@ -345,22 +356,41 @@ public class NativeArray extends IdScriptableObject
         return super.has(index, start);
     }
 
+    private static long toArrayIndex(Object id) {
+        if (id instanceof String) {
+            return toArrayIndex((String)id);
+        } else if (id instanceof Number) {
+            return toArrayIndex(((Number)id).doubleValue());
+        }
+        return -1;
+    }
+
     // if id is an array index (ECMA 15.4.0), return the number,
     // otherwise return -1L
     private static long toArrayIndex(String id)
     {
-        double d = ScriptRuntime.toNumber(id);
+        long index = toArrayIndex(ScriptRuntime.toNumber(id));
+        // Assume that ScriptRuntime.toString(index) is the same
+        // as java.lang.Long.toString(index) for long
+        if (Long.toString(index).equals(id)) {
+            return index;
+        }
+        return -1;
+    }
+
+    private static long toArrayIndex(double d) {
         if (d == d) {
             long index = ScriptRuntime.toUint32(d);
             if (index == d && index != 4294967295L) {
-                // Assume that ScriptRuntime.toString(index) is the same
-                // as java.lang.Long.toString(index) for long
-                if (Long.toString(index).equals(id)) {
-                    return index;
-                }
+                return index;
             }
         }
         return -1;
+    }
+
+    private static int toDenseIndex(Object id) {
+      long index = toArrayIndex(id);
+      return 0 <= index && index < Integer.MAX_VALUE ? (int) index : -1;
     }
 
     @Override
@@ -400,7 +430,9 @@ public class NativeArray extends IdScriptableObject
         if (start == this && !isSealed() && dense != null && 0 <= index &&
             (denseOnly || !isGetterOrSetter(null, index, true)))
         {
-            if (index < dense.length) {
+            if (!isExtensible() && this.length <= index) {
+                return;
+            } else if (index < dense.length) {
                 dense[index] = value;
                 if (this.length <= index)
                     this.length = (long)index + 1;
@@ -416,7 +448,7 @@ public class NativeArray extends IdScriptableObject
             }
         }
         super.put(index, start, value);
-        if (start == this) {
+        if (start == this && (lengthAttr & READONLY) == 0) {
             // only set the array length if given an array index (ECMA 15.4.0)
             if (this.length <= index) {
                 // avoid overflowing index!
@@ -455,7 +487,7 @@ public class NativeArray extends IdScriptableObject
         for (int i = 0; i != N; ++i) {
             // Replace existing elements by their indexes
             if (dense[i] != NOT_FOUND) {
-                ids[presentCount] = new Integer(i);
+                ids[presentCount] = Integer.valueOf(i);
                 ++presentCount;
             }
         }
@@ -470,14 +502,89 @@ public class NativeArray extends IdScriptableObject
     }
 
     @Override
+    public Object[] getAllIds()
+    {
+      Set<Object> allIds = new LinkedHashSet<Object>(
+            Arrays.asList(this.getIds()));
+      allIds.addAll(Arrays.asList(super.getAllIds()));
+      return allIds.toArray();
+    }
+
+    public Integer[] getIndexIds() {
+      Object[] ids = getIds();
+      java.util.List<Integer> indices = new java.util.ArrayList<Integer>(ids.length);
+      for (Object id : ids) {
+        int int32Id = ScriptRuntime.toInt32(id);
+        if (int32Id >= 0 && ScriptRuntime.toString(int32Id).equals(ScriptRuntime.toString(id))) {
+          indices.add(int32Id);
+        }
+      }
+      return indices.toArray(new Integer[indices.size()]);
+    }
+
+    @Override
     public Object getDefaultValue(Class<?> hint)
     {
         if (hint == ScriptRuntime.NumberClass) {
             Context cx = Context.getContext();
             if (cx.getLanguageVersion() == Context.VERSION_1_2)
-                return new Long(length);
+                return Long.valueOf(length);
         }
         return super.getDefaultValue(hint);
+    }
+
+    private ScriptableObject defaultIndexPropertyDescriptor(Object value) {
+      Scriptable scope = getParentScope();
+      if (scope == null) scope = this;
+      ScriptableObject desc = new NativeObject();
+      ScriptRuntime.setBuiltinProtoAndParent(desc, scope, TopLevel.Builtins.Object);
+      desc.defineProperty("value", value, EMPTY);
+      desc.defineProperty("writable", true, EMPTY);
+      desc.defineProperty("enumerable", true, EMPTY);
+      desc.defineProperty("configurable", true, EMPTY);
+      return desc;
+    }
+
+    @Override
+    public int getAttributes(int index) {
+        if (dense != null && index >= 0 && index < dense.length
+                && dense[index] != NOT_FOUND) {
+            return EMPTY;
+        }
+        return super.getAttributes(index);
+    }
+
+    @Override
+    protected ScriptableObject getOwnPropertyDescriptor(Context cx, Object id) {
+      if (dense != null) {
+        int index = toDenseIndex(id);
+        if (0 <= index && index < dense.length && dense[index] != NOT_FOUND) {
+          Object value = dense[index];
+          return defaultIndexPropertyDescriptor(value);
+        }
+      }
+      return super.getOwnPropertyDescriptor(cx, id);
+    }
+
+    @Override
+    protected void defineOwnProperty(Context cx, Object id,
+                                     ScriptableObject desc,
+                                     boolean checkValid) {
+      if (dense != null) {
+        Object[] values = dense;
+        dense = null;
+        denseOnly = false;
+        for (int i = 0; i < values.length; i++) {
+          if (values[i] != NOT_FOUND) {
+            put(i, this, values[i]);
+          }
+        }
+      }
+      long index = toArrayIndex(id);
+      if (index >= length) {
+        length = index + 1;
+      }
+      super.defineOwnProperty(cx, id, desc, checkValid);
     }
 
     /**
@@ -500,8 +607,10 @@ public class NativeArray extends IdScriptableObject
                 return new NativeArray(args);
             } else {
                 long len = ScriptRuntime.toUint32(arg0);
-                if (len != ((Number)arg0).doubleValue())
-                    throw Context.reportRuntimeError0("msg.arraylength.bad");
+                if (len != ((Number)arg0).doubleValue()) {
+                    String msg = ScriptRuntime.getMessage0("msg.arraylength.bad");
+                    throw ScriptRuntime.constructError("RangeError", msg);
+                }
                 return new NativeArray(len);
             }
         }
@@ -512,10 +621,11 @@ public class NativeArray extends IdScriptableObject
     }
 
     /** @deprecated Use {@link #getLength()} instead. */
+    @Deprecated
     public long jsGet_length() {
         return getLength();
     }
-    
+
     /**
      * Change the value of the internal flag that determines whether all
      * storage is handed by a dense backing array rather than an associative
@@ -538,11 +648,16 @@ public class NativeArray extends IdScriptableObject
          * 2. If Result(1) is false, return.
          * ?
          */
+        if ((lengthAttr & READONLY) != 0) {
+            return;
+        }
 
         double d = ScriptRuntime.toNumber(val);
         long longVal = ScriptRuntime.toUint32(d);
-        if (longVal != d)
-            throw Context.reportRuntimeError0("msg.arraylength.bad");
+        if (longVal != d) {
+            String msg = ScriptRuntime.getMessage0("msg.arraylength.bad");
+            throw ScriptRuntime.constructError("RangeError", msg);
+        }
 
         if (denseOnly) {
             if (longVal < length) {
@@ -602,15 +717,20 @@ public class NativeArray extends IdScriptableObject
         } else if (obj instanceof NativeArray) {
             return ((NativeArray)obj).getLength();
         }
-        return ScriptRuntime.toUint32(
-            ScriptRuntime.getObjectProp(obj, "length", cx));
+        Object len = ScriptableObject.getProperty(obj, "length");
+        if (len == Scriptable.NOT_FOUND) {
+            // toUint32(undefined) == 0
+            return 0;
+        }
+        return ScriptRuntime.toUint32(len);
     }
 
     private static Object setLengthProperty(Context cx, Scriptable target,
                                             long length)
     {
-        return ScriptRuntime.setObjectProp(
-                   target, "length", ScriptRuntime.wrapNumber(length), cx);
+        Object len = ScriptRuntime.wrapNumber(length);
+        ScriptableObject.putProperty(target, "length", len);
+        return len;
     }
 
     /* Utility functions to encapsulate index > Integer.MAX_VALUE
@@ -626,11 +746,27 @@ public class NativeArray extends IdScriptableObject
 
     private static Object getElem(Context cx, Scriptable target, long index)
     {
+        Object elem = getRawElem(target, index);
+        return (elem != Scriptable.NOT_FOUND ? elem : Undefined.instance);
+    }
+
+    // same as getElem, but without converting NOT_FOUND to undefined
+    private static Object getRawElem(Scriptable target, long index) {
+        if (index > Integer.MAX_VALUE) {
+            return ScriptableObject.getProperty(target, Long.toString(index));
+        } else {
+            return ScriptableObject.getProperty(target, (int)index);
+        }
+    }
+
+    private static void defineElem(Context cx, Scriptable target, long index,
+                                   Object value)
+    {
         if (index > Integer.MAX_VALUE) {
             String id = Long.toString(index);
-            return ScriptRuntime.getObjectProp(target, id, cx);
+            target.put(id, target, value);
         } else {
-            return ScriptRuntime.getObjectIndex(target, (int)index, cx);
+            target.put((int)index, target, value);
         }
     }
 
@@ -639,9 +775,19 @@ public class NativeArray extends IdScriptableObject
     {
         if (index > Integer.MAX_VALUE) {
             String id = Long.toString(index);
-            ScriptRuntime.setObjectProp(target, id, value, cx);
+            ScriptableObject.putProperty(target, id, value);
         } else {
-            ScriptRuntime.setObjectIndex(target, (int)index, value, cx);
+            ScriptableObject.putProperty(target, (int)index, value);
+        }
+    }
+
+    // Similar as setElem(), but triggers deleteElem() if value is NOT_FOUND
+    private static void setRawElem(Context cx, Scriptable target, long index,
+                                   Object value) {
+        if (value == NOT_FOUND) {
+            deleteElem(target, index);
+        } else {
+            setElem(cx, target, index, value);
         }
     }
 
@@ -685,10 +831,14 @@ public class NativeArray extends IdScriptableObject
         try {
             if (!iterating) {
                 cx.iterating.put(thisObj, 0); // stop recursion.
+                // make toSource print null and undefined values in recent versions
+                boolean skipUndefinedAndNull = !toSource
+                        || cx.getLanguageVersion() < Context.VERSION_1_5;
                 for (i = 0; i < length; i++) {
                     if (i > 0) result.append(separator);
-                    Object elem = getElem(cx, thisObj, i);
-                    if (elem == null || elem == Undefined.instance) {
+                    Object elem = getRawElem(thisObj, i);
+                    if (elem == NOT_FOUND || (skipUndefinedAndNull &&
+                            (elem == null || elem == Undefined.instance))) {
                         haslast = false;
                         continue;
                     }
@@ -708,12 +858,11 @@ public class NativeArray extends IdScriptableObject
                         }
 
                     } else {
-                        if (toLocale)
-                        {
+                        if (toLocale) {
                             Callable fun;
                             Scriptable funThis;
                             fun = ScriptRuntime.getPropFunctionAndThis(
-                                      elem, "toLocaleString", cx);
+                                      elem, "toLocaleString", cx, scope);
                             funThis = ScriptRuntime.lastStoredScriptable(cx);
                             elem = fun.call(cx, scope, funThis,
                                             ScriptRuntime.emptyArgs);
@@ -824,10 +973,10 @@ public class NativeArray extends IdScriptableObject
         long half = len / 2;
         for(long i=0; i < half; i++) {
             long j = len - i - 1;
-            Object temp1 = getElem(cx, thisObj, i);
-            Object temp2 = getElem(cx, thisObj, j);
-            setElem(cx, thisObj, i, temp2);
-            setElem(cx, thisObj, j, temp1);
+            Object temp1 = getRawElem(thisObj, i);
+            Object temp2 = getRawElem(thisObj, j);
+            setRawElem(cx, thisObj, i, temp2);
+            setRawElem(cx, thisObj, j, temp1);
         }
         return thisObj;
     }
@@ -835,212 +984,84 @@ public class NativeArray extends IdScriptableObject
     /**
      * See ECMA 15.4.4.5
      */
-    private static Scriptable js_sort(Context cx, Scriptable scope,
-                                      Scriptable thisObj, Object[] args)
+    private static Scriptable js_sort(final Context cx, final Scriptable scope,
+            final Scriptable thisObj, final Object[] args)
     {
-        long length = getLengthProperty(cx, thisObj);
-
-        if (length <= 1) { return thisObj; }
-
-        Object compare;
-        Object[] cmpBuf;
-
+        final Comparator<Object> comparator;
         if (args.length > 0 && Undefined.instance != args[0]) {
-            // sort with given compare function
-            compare = args[0];
-            cmpBuf = new Object[2]; // Buffer for cmp arguments
+            final Callable jsCompareFunction = ScriptRuntime
+                    .getValueFunctionAndThis(args[0], cx);
+            final Scriptable funThis = ScriptRuntime.lastStoredScriptable(cx);
+            final Object[] cmpBuf = new Object[2]; // Buffer for cmp arguments
+            comparator = new Comparator<Object>() {
+                public int compare(final Object x, final Object y) {
+                    // sort undefined to end
+                    if (x == NOT_FOUND) {
+                        return y == NOT_FOUND ? 0 : 1;
+                    } else if (y == NOT_FOUND) {
+                        return -1;
+                    } else if (x == Undefined.instance) {
+                        return y == Undefined.instance ? 0 : 1;
+                    } else if (y == Undefined.instance) {
+                        return -1;
+                    }
+
+                    cmpBuf[0] = x;
+                    cmpBuf[1] = y;
+                    Object ret = jsCompareFunction.call(cx, scope, funThis,
+                            cmpBuf);
+                    final double d = ScriptRuntime.toNumber(ret);
+                    if (d < 0) {
+                        return -1;
+                    } else if (d > 0) {
+                        return +1;
+                    }
+                    return 0; // ??? double and 0???
+                }
+            };
         } else {
-            // sort with default compare
-            compare = null;
-            cmpBuf = null;
-        }
-        if (thisObj instanceof NativeArray) {
-            NativeArray na = (NativeArray) thisObj;
-            if (na.denseOnly) {
-                int ilength = (int) length;
-                heapsort(cx, scope, na.dense, ilength, compare, cmpBuf);
-                return thisObj;
-            }
+            comparator = new Comparator<Object>() {
+                public int compare(final Object x, final Object y) {
+                    // sort undefined to end
+                    if (x == NOT_FOUND) {
+                        return y == NOT_FOUND ? 0 : 1;
+                    } else if (y == NOT_FOUND) {
+                        return -1;
+                    } else if (x == Undefined.instance) {
+                        return y == Undefined.instance ? 0 : 1;
+                    } else if (y == Undefined.instance) {
+                        return -1;
+                    }
+
+                    final String a = ScriptRuntime.toString(x);
+                    final String b = ScriptRuntime.toString(y);
+                    return a.compareTo(b);
+                }
+            };
         }
 
-        // Should we use the extended sort function, or the faster one?
-        if (length >= Integer.MAX_VALUE) {
-            heapsort_extended(cx, scope, thisObj, length, compare, cmpBuf);
-        } else {
-            int ilength = (int)length;
-            // copy the JS array into a working array, so it can be
-            // sorted cheaply.
-            Object[] working = new Object[ilength];
-            for (int i = 0; i != ilength; ++i) {
-                working[i] = getElem(cx, thisObj, i);
-            }
-
-            heapsort(cx, scope, working, ilength, compare, cmpBuf);
-
-            // copy the working array back into thisObj
-            for (int i = 0; i != ilength; ++i) {
-                setElem(cx, thisObj, i, working[i]);
-            }
+        long llength = getLengthProperty(cx, thisObj);
+        final int length = (int) llength;
+        if (llength != length) {
+            throw Context.reportRuntimeError1(
+                "msg.arraylength.too.big", String.valueOf(llength));
         }
+        // copy the JS array into a working array, so it can be
+        // sorted cheaply.
+        final Object[] working = new Object[length];
+        for (int i = 0; i != length; ++i) {
+            working[i] = getRawElem(thisObj, i);
+        }
+
+        Arrays.sort(working, comparator);
+
+        // copy the working array back into thisObj
+        for (int i = 0; i < length; ++i) {
+            setRawElem(cx, thisObj, i, working[i]);
+        }
+
         return thisObj;
     }
-
-    // Return true only if x > y
-    private static boolean isBigger(Context cx, Scriptable scope,
-                                    Object x, Object y,
-                                    Object cmp, Object[] cmpBuf)
-    {
-        if (cmp == null) {
-            if (cmpBuf != null) Kit.codeBug();
-        } else {
-            if (cmpBuf == null || cmpBuf.length != 2) Kit.codeBug();
-        }
-
-        Object undef = Undefined.instance;
-        Object notfound = Scriptable.NOT_FOUND;
-
-        // sort undefined to end
-        if (y == undef || y == notfound) {
-            return false; // x can not be bigger then undef
-        } else if (x == undef || x == notfound) {
-            return true; // y != undef here, so x > y
-        }
-
-        if (cmp == null) {
-            // if no cmp function supplied, sort lexicographically
-            String a = ScriptRuntime.toString(x);
-            String b = ScriptRuntime.toString(y);
-            return a.compareTo(b) > 0;
-        }
-        else {
-            // assemble args and call supplied JS cmp function
-            cmpBuf[0] = x;
-            cmpBuf[1] = y;
-            Callable fun = ScriptRuntime.getValueFunctionAndThis(cmp, cx);
-            Scriptable funThis = ScriptRuntime.lastStoredScriptable(cx);
-
-            Object ret = fun.call(cx, scope, funThis, cmpBuf);
-            double d = ScriptRuntime.toNumber(ret);
-
-            // XXX what to do when cmp function returns NaN?  ECMA states
-            // that it's then not a 'consistent comparison function'... but
-            // then what do we do?  Back out and start over with the generic
-            // cmp function when we see a NaN?  Throw an error?
-
-            // for now, just ignore it:
-
-            return d > 0;
-        }
-    }
-
-/** Heapsort implementation.
- * See "Introduction to Algorithms" by Cormen, Leiserson, Rivest for details.
- * Adjusted for zero based indexes.
- */
-    private static void heapsort(Context cx, Scriptable scope,
-                                 Object[] array, int length,
-                                 Object cmp, Object[] cmpBuf)
-    {
-        if (length <= 1) Kit.codeBug();
-
-        // Build heap
-        for (int i = length / 2; i != 0;) {
-            --i;
-            Object pivot = array[i];
-            heapify(cx, scope, pivot, array, i, length, cmp, cmpBuf);
-        }
-
-        // Sort heap
-        for (int i = length; i != 1;) {
-            --i;
-            Object pivot = array[i];
-            array[i] = array[0];
-            heapify(cx, scope, pivot, array, 0, i, cmp, cmpBuf);
-        }
-    }
-
-/** pivot and child heaps of i should be made into heap starting at i,
- * original array[i] is never used to have less array access during sorting.
- */
-    private static void heapify(Context cx, Scriptable scope,
-                                Object pivot, Object[] array, int i, int end,
-                                Object cmp, Object[] cmpBuf)
-    {
-        for (;;) {
-            int child = i * 2 + 1;
-            if (child >= end) {
-                break;
-            }
-            Object childVal = array[child];
-            if (child + 1 < end) {
-                Object nextVal = array[child + 1];
-                if (isBigger(cx, scope, nextVal, childVal, cmp, cmpBuf)) {
-                    ++child; childVal = nextVal;
-                }
-            }
-            if (!isBigger(cx, scope, childVal, pivot, cmp, cmpBuf)) {
-                break;
-            }
-            array[i] = childVal;
-            i = child;
-        }
-        array[i] = pivot;
-    }
-
-/** Version of heapsort that call getElem/setElem on target to query/assign
- * array elements instead of Java array access
- */
-    private static void heapsort_extended(Context cx, Scriptable scope,
-                                          Scriptable target, long length,
-                                          Object cmp, Object[] cmpBuf)
-    {
-        if (length <= 1) Kit.codeBug();
-
-        // Build heap
-        for (long i = length / 2; i != 0;) {
-            --i;
-            Object pivot = getElem(cx, target, i);
-            heapify_extended(cx, scope, pivot, target, i, length, cmp, cmpBuf);
-        }
-
-        // Sort heap
-        for (long i = length; i != 1;) {
-            --i;
-            Object pivot = getElem(cx, target, i);
-            setElem(cx, target, i, getElem(cx, target, 0));
-            heapify_extended(cx, scope, pivot, target, 0, i, cmp, cmpBuf);
-        }
-    }
-
-    private static void heapify_extended(Context cx, Scriptable scope,
-                                         Object pivot, Scriptable target,
-                                         long i, long end,
-                                         Object cmp, Object[] cmpBuf)
-    {
-        for (;;) {
-            long child = i * 2 + 1;
-            if (child >= end) {
-                break;
-            }
-            Object childVal = getElem(cx, target, child);
-            if (child + 1 < end) {
-                Object nextVal = getElem(cx, target, child + 1);
-                if (isBigger(cx, scope, nextVal, childVal, cmp, cmpBuf)) {
-                    ++child; childVal = nextVal;
-                }
-            }
-            if (!isBigger(cx, scope, childVal, pivot, cmp, cmpBuf)) {
-                break;
-            }
-            setElem(cx, target, i, childVal);
-            i = child;
-        }
-        setElem(cx, target, i, pivot);
-    }
-
-    /**
-     * Non-ECMA methods.
-     */
 
     private static Object js_push(Context cx, Scriptable thisObj,
                                   Object[] args)
@@ -1098,8 +1119,9 @@ public class NativeArray extends IdScriptableObject
             // Get the to-be-deleted property's value.
             result = getElem(cx, thisObj, length);
 
-            // We don't need to delete the last property, because
-            // setLength does that for us.
+            // We need to delete the last property, because 'thisObj' may not
+            // have setLength which does that for us.
+            deleteElem(thisObj, length);
         } else {
             result = Undefined.instance;
         }
@@ -1120,7 +1142,7 @@ public class NativeArray extends IdScriptableObject
                 Object result = na.dense[0];
                 System.arraycopy(na.dense, 1, na.dense, 0, (int)na.length);
                 na.dense[(int)na.length] = NOT_FOUND;
-                return result;
+                return result == NOT_FOUND ? Undefined.instance : result;
             }
         }
         Object result;
@@ -1138,12 +1160,13 @@ public class NativeArray extends IdScriptableObject
              */
             if (length > 0) {
                 for (i = 1; i <= length; i++) {
-                    Object temp = getElem(cx, thisObj, i);
-                    setElem(cx, thisObj, i - 1, temp);
+                    Object temp = getRawElem(thisObj, i);
+                    setRawElem(cx, thisObj, i - 1, temp);
                 }
             }
-            // We don't need to delete the last property, because
-            // setLength does that for us.
+            // We need to delete the last property, because 'thisObj' may not
+            // have setLength which does that for us.
+            deleteElem(thisObj, length);
         } else {
             result = Undefined.instance;
         }
@@ -1175,8 +1198,8 @@ public class NativeArray extends IdScriptableObject
             /*  Slide up the array to make room for args at the bottom */
             if (length > 0) {
                 for (long last = length - 1; last >= 0; last--) {
-                    Object temp = getElem(cx, thisObj, last);
-                    setElem(cx, thisObj, last + argc, temp);
+                    Object temp = getRawElem(thisObj, last);
+                    setRawElem(cx, thisObj, last + argc, temp);
                 }
             }
 
@@ -1184,12 +1207,10 @@ public class NativeArray extends IdScriptableObject
             for (int i = 0; i < args.length; i++) {
                 setElem(cx, thisObj, i, args[i]);
             }
-
-            /* Follow Perl by returning the new array length. */
-            length += args.length;
-            return setLengthProperty(cx, thisObj, length);
         }
-        return ScriptRuntime.wrapNumber(length);
+        /* Follow Perl by returning the new array length. */
+        length += args.length;
+        return setLengthProperty(cx, thisObj, length);
     }
 
     private static Object js_splice(Context cx, Scriptable scope,
@@ -1206,7 +1227,7 @@ public class NativeArray extends IdScriptableObject
         scope = getTopLevelScope(scope);
         int argc = args.length;
         if (argc == 0)
-            return ScriptRuntime.newObject(cx, scope, "Array", null);
+            return cx.newArray(scope, 0);
         long length = getLengthProperty(cx, thisObj);
 
         /* Convert the first argument into a starting index. */
@@ -1255,13 +1276,16 @@ public class NativeArray extends IdScriptableObject
                     Object[] copy = new Object[intLen];
                     System.arraycopy(na.dense, (int) begin, copy, 0, intLen);
                     result = cx.newArray(scope, copy);
-            	} else {
-            		Scriptable resultArray = ScriptRuntime.newObject(cx, scope,
-                        "Array", null);
+                } else {
+                    Scriptable resultArray = cx.newArray(scope, 0);
                     for (long last = begin; last != end; last++) {
-                        Object temp = getElem(cx, thisObj, last);
-                        setElem(cx, resultArray, last - begin, temp);
+                        Object temp = getRawElem(thisObj, last);
+                        if (temp != NOT_FOUND) {
+                            setElem(cx, resultArray, last - begin, temp);
+                        }
                     }
+                    // Need to set length for sparse result array
+                    setLengthProperty(cx, resultArray, end - begin);
                     result = resultArray;
             	}
             }
@@ -1270,8 +1294,8 @@ public class NativeArray extends IdScriptableObject
                 /* Emulate C JS1.2; if no elements are removed, return undefined. */
                 result = Undefined.instance;
             } else {
-            	result = ScriptRuntime.newObject(cx, scope, "Array", null);
-        	}
+                result = cx.newArray(scope, 0);
+            }
         }
 
         /* Find the direction (up or down) to copy and make way for argv. */
@@ -1294,13 +1318,16 @@ public class NativeArray extends IdScriptableObject
 
         if (delta > 0) {
             for (long last = length - 1; last >= end; last--) {
-                Object temp = getElem(cx, thisObj, last);
-                setElem(cx, thisObj, last + delta, temp);
+                Object temp = getRawElem(thisObj, last);
+                setRawElem(cx, thisObj, last + delta, temp);
             }
         } else if (delta < 0) {
             for (long last = end; last < length; last++) {
-                Object temp = getElem(cx, thisObj, last);
-                setElem(cx, thisObj, last + delta, temp);
+                Object temp = getRawElem(thisObj, last);
+                setRawElem(cx, thisObj, last + delta, temp);
+            }
+            for (long k = length + delta; k < length; ++k) {
+                deleteElem(thisObj, k);
             }
         }
 
@@ -1323,8 +1350,7 @@ public class NativeArray extends IdScriptableObject
     {
         // create an empty Array to return.
         scope = getTopLevelScope(scope);
-        Function ctor = ScriptRuntime.getExistingCtor(cx, scope, "Array");
-        Scriptable result = ctor.construct(cx, scope, ScriptRuntime.emptyArgs);
+        Scriptable result = cx.newArray(scope, 0);
         if (thisObj instanceof NativeArray && result instanceof NativeArray) {
             NativeArray denseThis = (NativeArray) thisObj;
             NativeArray denseResult = (NativeArray) result;
@@ -1370,16 +1396,18 @@ public class NativeArray extends IdScriptableObject
         /* Put the target in the result array; only add it as an array
          * if it looks like one.
          */
-        if (ScriptRuntime.instanceOf(thisObj, ctor, cx)) {
+        if (js_isArray(thisObj)) {
             length = getLengthProperty(cx, thisObj);
 
             // Copy from the target object into the result
             for (slot = 0; slot < length; slot++) {
-                Object temp = getElem(cx, thisObj, slot);
-                setElem(cx, result, slot, temp);
+                Object temp = getRawElem(thisObj, slot);
+                if (temp != NOT_FOUND) {
+                    defineElem(cx, result, slot, temp);
+                }
             }
         } else {
-            setElem(cx, result, slot++, thisObj);
+            defineElem(cx, result, slot++, thisObj);
         }
 
         /* Copy from the arguments into the result.  If any argument
@@ -1387,18 +1415,21 @@ public class NativeArray extends IdScriptableObject
          * elements separately; otherwise, just copy the argument.
          */
         for (int i = 0; i < args.length; i++) {
-            if (ScriptRuntime.instanceOf(args[i], ctor, cx)) {
-                // ScriptRuntime.instanceOf => instanceof Scriptable
+            if (js_isArray(args[i])) {
+                // js_isArray => instanceof Scriptable
                 Scriptable arg = (Scriptable)args[i];
                 length = getLengthProperty(cx, arg);
                 for (long j = 0; j < length; j++, slot++) {
-                    Object temp = getElem(cx, arg, j);
-                    setElem(cx, result, slot, temp);
+                    Object temp = getRawElem(arg, j);
+                    if (temp != NOT_FOUND) {
+                        defineElem(cx, result, slot, temp);
+                    }
                 }
             } else {
-                setElem(cx, result, slot++, args[i]);
+                defineElem(cx, result, slot++, args[i]);
             }
         }
+        setLengthProperty(cx, result, slot);
         return result;
     }
 
@@ -1406,7 +1437,7 @@ public class NativeArray extends IdScriptableObject
                                 Object[] args)
     {
         Scriptable scope = getTopLevelScope(this);
-        Scriptable result = ScriptRuntime.newObject(cx, scope, "Array", null);
+        Scriptable result = cx.newArray(scope, 0);
         long length = getLengthProperty(cx, thisObj);
 
         long begin, end;
@@ -1415,7 +1446,7 @@ public class NativeArray extends IdScriptableObject
             end = length;
         } else {
             begin = toSliceIndex(ScriptRuntime.toInteger(args[0]), length);
-            if (args.length == 1) {
+            if (args.length == 1 || args[1] == Undefined.instance) {
                 end = length;
             } else {
                 end = toSliceIndex(ScriptRuntime.toInteger(args[1]), length);
@@ -1423,9 +1454,12 @@ public class NativeArray extends IdScriptableObject
         }
 
         for (long slot = begin; slot < end; slot++) {
-            Object temp = getElem(cx, thisObj, slot);
-            setElem(cx, result, slot - begin, temp);
+            Object temp = getRawElem(thisObj, slot);
+            if (temp != NOT_FOUND) {
+                defineElem(cx, result, slot - begin, temp);
+            }
         }
+        setLengthProperty(cx, result, Math.max(0, end - begin));
 
         return result;
     }
@@ -1446,101 +1480,112 @@ public class NativeArray extends IdScriptableObject
         return result;
     }
 
-    /**
-     * Implements the methods "indexOf" and "lastIndexOf".
-     */
-    private Object indexOfHelper(Context cx, Scriptable thisObj,
-                                 Object[] args, boolean isLast)
+    private static Object js_indexOf(Context cx, Scriptable thisObj,
+                                     Object[] args)
     {
         Object compareTo = args.length > 0 ? args[0] : Undefined.instance;
         long length = getLengthProperty(cx, thisObj);
+        /*
+         * From http://developer.mozilla.org/en/docs/Core_JavaScript_1.5_Reference:Objects:Array:indexOf
+         * The index at which to begin the search. Defaults to 0, i.e. the
+         * whole array will be searched. If the index is greater than or
+         * equal to the length of the array, -1 is returned, i.e. the array
+         * will not be searched. If negative, it is taken as the offset from
+         * the end of the array. Note that even when the index is negative,
+         * the array is still searched from front to back. If the calculated
+         * index is less than 0, the whole array will be searched.
+         */
         long start;
-        if (isLast) {
-            // lastIndexOf
-            /*
-             * From http://developer.mozilla.org/en/docs/Core_JavaScript_1.5_Reference:Objects:Array:lastIndexOf
-             * The index at which to start searching backwards. Defaults to the
-             * array's length, i.e. the whole array will be searched. If the
-             * index is greater than or equal to the length of the array, the
-             * whole array will be searched. If negative, it is taken as the
-             * offset from the end of the array. Note that even when the index
-             * is negative, the array is still searched from back to front. If
-             * the calculated index is less than 0, -1 is returned, i.e. the
-             * array will not be searched.
-             */
-            if (args.length < 2) {
-                // default
-                start = length-1;
-            } else {
-                start = ScriptRuntime.toInt32(ScriptRuntime.toNumber(args[1]));
-                if (start >= length)
-                    start = length-1;
-                else if (start < 0)
-                    start += length;
-                // Note that start may be negative, but that's okay
-                // as the result of -1 will fall out from the code below
-            }
+        if (args.length < 2) {
+            // default
+            start = 0;
         } else {
-            // indexOf
-            /*
-             * From http://developer.mozilla.org/en/docs/Core_JavaScript_1.5_Reference:Objects:Array:indexOf
-             * The index at which to begin the search. Defaults to 0, i.e. the
-             * whole array will be searched. If the index is greater than or
-             * equal to the length of the array, -1 is returned, i.e. the array
-             * will not be searched. If negative, it is taken as the offset from
-             * the end of the array. Note that even when the index is negative,
-             * the array is still searched from front to back. If the calculated
-             * index is less than 0, the whole array will be searched.
-             */
-            if (args.length < 2) {
-                // default
-                start = 0;
-            } else {
-                start = ScriptRuntime.toInt32(ScriptRuntime.toNumber(args[1]));
-                if (start < 0) {
-                    start += length;
-                    if (start < 0)
-                        start = 0;
-                }
-                // Note that start may be > length-1, but that's okay
-                // as the result of -1 will fall out from the code below
+            start = (long)ScriptRuntime.toInteger(args[1]);
+            if (start < 0) {
+                start += length;
+                if (start < 0)
+                    start = 0;
             }
+            if (start > length - 1) return NEGATIVE_ONE;
         }
         if (thisObj instanceof NativeArray) {
             NativeArray na = (NativeArray) thisObj;
             if (na.denseOnly) {
-                if (isLast) {
-                  for (int i=(int)start; i >= 0; i--) {
-                      if (na.dense[i] != Scriptable.NOT_FOUND &&
-                          ScriptRuntime.shallowEq(na.dense[i], compareTo))
-                      {
-                          return new Long(i);
-                      }
-                  }
-                } else {
-                  for (int i=(int)start; i < length; i++) {
-                      if (na.dense[i] != Scriptable.NOT_FOUND &&
-                          ScriptRuntime.shallowEq(na.dense[i], compareTo))
-                      {
-                          return new Long(i);
-                      }
-                  }
+                Scriptable proto = na.getPrototype();
+                for (int i=(int)start; i < length; i++) {
+                    Object val = na.dense[i];
+                    if (val == NOT_FOUND && proto != null) {
+                        val = ScriptableObject.getProperty(proto, i);
+                    }
+                    if (val != NOT_FOUND &&
+                        ScriptRuntime.shallowEq(val, compareTo))
+                    {
+                        return Long.valueOf(i);
+                    }
                 }
                 return NEGATIVE_ONE;
             }
         }
-        if (isLast) {
-          for (long i=start; i >= 0; i--) {
-              if (ScriptRuntime.shallowEq(getElem(cx, thisObj, i), compareTo)) {
-                  return new Long(i);
-              }
-          }
+        for (long i=start; i < length; i++) {
+            Object val = getRawElem(thisObj, i);
+            if (val != NOT_FOUND && ScriptRuntime.shallowEq(val, compareTo)) {
+                return Long.valueOf(i);
+            }
+        }
+        return NEGATIVE_ONE;
+    }
+
+    private static Object js_lastIndexOf(Context cx, Scriptable thisObj,
+            Object[] args)
+    {
+        Object compareTo = args.length > 0 ? args[0] : Undefined.instance;
+        long length = getLengthProperty(cx, thisObj);
+        /*
+         * From http://developer.mozilla.org/en/docs/Core_JavaScript_1.5_Reference:Objects:Array:lastIndexOf
+         * The index at which to start searching backwards. Defaults to the
+         * array's length, i.e. the whole array will be searched. If the
+         * index is greater than or equal to the length of the array, the
+         * whole array will be searched. If negative, it is taken as the
+         * offset from the end of the array. Note that even when the index
+         * is negative, the array is still searched from back to front. If
+         * the calculated index is less than 0, -1 is returned, i.e. the
+         * array will not be searched.
+         */
+        long start;
+        if (args.length < 2) {
+            // default
+            start = length-1;
         } else {
-          for (long i=start; i < length; i++) {
-              if (ScriptRuntime.shallowEq(getElem(cx, thisObj, i), compareTo)) {
-                  return new Long(i);
-              }
-          }
+            start = (long)ScriptRuntime.toInteger(args[1]);
+            if (start >= length)
+                start = length-1;
+            else if (start < 0)
+                start += length;
+            if (start < 0) return NEGATIVE_ONE;
+        }
+        if (thisObj instanceof NativeArray) {
+            NativeArray na = (NativeArray) thisObj;
+            if (na.denseOnly) {
+                Scriptable proto = na.getPrototype();
+                for (int i=(int)start; i >= 0; i--) {
+                    Object val = na.dense[i];
+                    if (val == NOT_FOUND && proto != null) {
+                        val = ScriptableObject.getProperty(proto, i);
+                    }
+                    if (val != NOT_FOUND &&
+                        ScriptRuntime.shallowEq(val, compareTo))
+                    {
+                        return Long.valueOf(i);
+                    }
+                }
+                return NEGATIVE_ONE;
+            }
+        }
+        for (long i=start; i >= 0; i--) {
+            Object val = getRawElem(thisObj, i);
+            if (val != NOT_FOUND && ScriptRuntime.shallowEq(val, compareTo)) {
+                return Long.valueOf(i);
+            }
         }
         return NEGATIVE_ONE;
     }
@@ -1548,36 +1593,44 @@ public class NativeArray extends IdScriptableObject
     /**
      * Implements the methods "every", "filter", "forEach", "map", and "some".
      */
-    private Object iterativeMethod(Context cx, int id, Scriptable scope, 
-                                   Scriptable thisObj, Object[] args)
+    private static Object iterativeMethod(Context cx, int id, Scriptable scope,
+                                          Scriptable thisObj, Object[] args)
     {
+        long length = getLengthProperty(cx, thisObj);
         Object callbackArg = args.length > 0 ? args[0] : Undefined.instance;
         if (callbackArg == null || !(callbackArg instanceof Function)) {
-            throw ScriptRuntime.notFunctionError(
-                     ScriptRuntime.toString(callbackArg));
+            throw ScriptRuntime.notFunctionError(callbackArg);
+        } else if ((id == Id_find || id == Id_findIndex) && !(callbackArg instanceof NativeFunction)) {
+            throw ScriptRuntime.notFunctionError(callbackArg);
         }
+
         Function f = (Function) callbackArg;
         Scriptable parent = ScriptableObject.getTopLevelScope(f);
         Scriptable thisArg;
-        if (args.length < 2 || args[1] == null || args[1] == Undefined.instance)
-        {
+        if (args.length < 2 || args[1] == null || args[1] == Undefined.instance) {
             thisArg = parent;
         } else {
             thisArg = ScriptRuntime.toObject(cx, scope, args[1]);
         }
-        long length = getLengthProperty(cx, thisObj);
-        Scriptable array = ScriptRuntime.newObject(cx, scope, "Array", null);
+
+        if ((Id_find == id || Id_findIndex == id) && thisArg == thisObj) {
+            throw ScriptRuntime.typeError("Array.prototype method called on null or undefined");
+        }
+
+        Scriptable array = null;
+        if (id == Id_filter || id == Id_map) {
+            int resultLength = id == Id_map ? (int) length : 0;
+            array = cx.newArray(scope, resultLength);
+        }
         long j=0;
         for (long i=0; i < length; i++) {
             Object[] innerArgs = new Object[3];
-            Object elem = (i > Integer.MAX_VALUE)
-                ? ScriptableObject.getProperty(thisObj, Long.toString(i))
-                : ScriptableObject.getProperty(thisObj, (int)i);
+            Object elem = getRawElem(thisObj, i);
             if (elem == Scriptable.NOT_FOUND) {
                 continue;
             }
             innerArgs[0] = elem;
-            innerArgs[1] = new Long(i);
+            innerArgs[1] = Long.valueOf(i);
             innerArgs[2] = thisObj;
             Object result = f.call(cx, parent, thisArg, innerArgs);
             switch (id) {
@@ -1587,16 +1640,24 @@ public class NativeArray extends IdScriptableObject
                 break;
               case Id_filter:
                 if (ScriptRuntime.toBoolean(result))
-                  setElem(cx, array, j++, innerArgs[0]);
+                    defineElem(cx, array, j++, innerArgs[0]);
                 break;
               case Id_forEach:
                 break;
               case Id_map:
-                setElem(cx, array, i, result);
+                defineElem(cx, array, i, result);
                 break;
               case Id_some:
                 if (ScriptRuntime.toBoolean(result))
                     return Boolean.TRUE;
+                break;
+              case Id_find:
+                if (ScriptRuntime.toBoolean(result))
+                  return elem;
+                break;
+            case Id_findIndex:
+                if (ScriptRuntime.toBoolean(result))
+                    return ScriptRuntime.wrapNumber(i);
                 break;
             }
         }
@@ -1608,10 +1669,275 @@ public class NativeArray extends IdScriptableObject
             return array;
           case Id_some:
             return Boolean.FALSE;
+          case Id_findIndex:
+            return ScriptRuntime.wrapNumber(-1);
           case Id_forEach:
           default:
             return Undefined.instance;
         }
+    }
+
+    /**
+     * Implements the methods "reduce" and "reduceRight".
+     */
+    private static Object reduceMethod(Context cx, int id, Scriptable scope,
+                                       Scriptable thisObj, Object[] args)
+    {
+        long length = getLengthProperty(cx, thisObj);
+        Object callbackArg = args.length > 0 ? args[0] : Undefined.instance;
+        if (callbackArg == null || !(callbackArg instanceof Function)) {
+            throw ScriptRuntime.notFunctionError(callbackArg);
+        }
+        Function f = (Function) callbackArg;
+        Scriptable parent = ScriptableObject.getTopLevelScope(f);
+        // hack to serve both reduce and reduceRight with the same loop
+        boolean movingLeft = id == Id_reduce;
+        Object value = args.length > 1 ? args[1] : Scriptable.NOT_FOUND;
+        for (long i = 0; i < length; i++) {
+            long index = movingLeft ? i : (length - 1 - i);
+            Object elem = getRawElem(thisObj, index);
+            if (elem == Scriptable.NOT_FOUND) {
+                continue;
+            }
+            if (value == Scriptable.NOT_FOUND) {
+                // no initial value passed, use first element found as inital value
+                value = elem;
+            } else {
+                Object[] innerArgs = { value, elem, index, thisObj };
+                value = f.call(cx, parent, parent, innerArgs);
+            }
+        }
+        if (value == Scriptable.NOT_FOUND) {
+            // reproduce spidermonkey error message
+            throw ScriptRuntime.typeError0("msg.empty.array.reduce");
+        }
+        return value;
+    }
+
+    private static boolean js_isArray(Object o) {
+        if (!(o instanceof Scriptable)) {
+            return false;
+        }
+        return "Array".equals(((Scriptable)o).getClassName());
+    }
+
+    // methods to implement java.util.List
+
+    public boolean contains(Object o) {
+        return indexOf(o) > -1;
+    }
+
+    public Object[] toArray() {
+        return toArray(ScriptRuntime.emptyArgs);
+    }
+
+    public Object[] toArray(Object[] a) {
+        long longLen = length;
+        if (longLen > Integer.MAX_VALUE) {
+            throw new IllegalStateException();
+        }
+        int len = (int) longLen;
+        Object[] array = a.length >= len ?
+                a : (Object[]) java.lang.reflect.Array
+                .newInstance(a.getClass().getComponentType(), len);
+        for (int i = 0; i < len; i++) {
+            array[i] = get(i);
+        }
+        return array;
+    }
+
+    public boolean containsAll(Collection c) {
+        for (Object aC : c)
+            if (!contains(aC))
+                return false;
+        return true;
+    }
+
+    @Override
+    public int size() {
+        long longLen = length;
+        if (longLen > Integer.MAX_VALUE) {
+            throw new IllegalStateException();
+        }
+        return (int) longLen;
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return length == 0;
+    }
+
+    public Object get(long index) {
+        if (index < 0 || index >= length) {
+            throw new IndexOutOfBoundsException();
+        }
+        Object value = getRawElem(this, index);
+        if (value == Scriptable.NOT_FOUND || value == Undefined.instance) {
+            return null;
+        } else if (value instanceof Wrapper) {
+            return ((Wrapper) value).unwrap();
+        } else {
+            return value;
+        }
+    }
+
+    public Object get(int index) {
+        return get((long) index);
+    }
+
+    public int indexOf(Object o) {
+        long longLen = length;
+        if (longLen > Integer.MAX_VALUE) {
+            throw new IllegalStateException();
+        }
+        int len = (int) longLen;
+        if (o == null) {
+            for (int i = 0; i < len; i++) {
+                if (get(i) == null) {
+                    return i;
+                }
+            }
+        } else {
+            for (int i = 0; i < len; i++) {
+                if (o.equals(get(i))) {
+                    return i;
+                }
+            }
+        }
+        return -1;
+    }
+
+    public int lastIndexOf(Object o) {
+        long longLen = length;
+        if (longLen > Integer.MAX_VALUE) {
+            throw new IllegalStateException();
+        }
+        int len = (int) longLen;
+        if (o == null) {
+            for (int i = len - 1; i >= 0; i--) {
+                if (get(i) == null) {
+                    return i;
+                }
+            }
+        } else {
+            for (int i = len - 1; i >= 0; i--) {
+                if (o.equals(get(i))) {
+                    return i;
+                }
+            }
+        }
+        return -1;
+    }
+
+    public Iterator iterator() {
+        return listIterator(0);
+    }
+
+    public ListIterator listIterator() {
+        return listIterator(0);
+    }
+
+    public ListIterator listIterator(final int start) {
+        long longLen = length;
+        if (longLen > Integer.MAX_VALUE) {
+            throw new IllegalStateException();
+        }
+        final int len = (int) longLen;
+
+        if (start < 0 || start > len) {
+            throw new IndexOutOfBoundsException("Index: " + start);
+        }
+
+        return new ListIterator() {
+
+            int cursor = start;
+
+            public boolean hasNext() {
+                return cursor < len;
+            }
+
+            public Object next() {
+                if (cursor == len) {
+                    throw new NoSuchElementException();
+                }
+                return get(cursor++);
+            }
+
+            public boolean hasPrevious() {
+                return cursor > 0;
+            }
+
+            public Object previous() {
+                if (cursor == 0) {
+                    throw new NoSuchElementException();
+                }
+                return get(--cursor);
+            }
+
+            public int nextIndex() {
+                return cursor;
+            }
+
+            public int previousIndex() {
+                return cursor - 1;
+            }
+
+            public void remove() {
+                throw new UnsupportedOperationException();
+            }
+
+            public void add(Object o) {
+                throw new UnsupportedOperationException();
+            }
+
+            public void set(Object o) {
+                throw new UnsupportedOperationException();
+            }
+        };
+    }
+
+    public boolean add(Object o) {
+        throw new UnsupportedOperationException();
+    }
+
+    public boolean remove(Object o) {
+        throw new UnsupportedOperationException();
+    }
+
+    public boolean addAll(Collection c) {
+        throw new UnsupportedOperationException();
+    }
+
+    public boolean removeAll(Collection c) {
+        throw new UnsupportedOperationException();
+    }
+
+    public boolean retainAll(Collection c) {
+        throw new UnsupportedOperationException();
+    }
+
+    public void clear() {
+        throw new UnsupportedOperationException();
+    }
+
+    public void add(int index, Object element) {
+        throw new UnsupportedOperationException();
+    }
+
+    public boolean addAll(int index, Collection c) {
+        throw new UnsupportedOperationException();
+    }
+
+    public Object set(int index, Object element) {
+        throw new UnsupportedOperationException();
+    }
+
+    public Object remove(int index) {
+        throw new UnsupportedOperationException();
+    }
+
+    public List subList(int fromIndex, int toIndex) {
+        throw new UnsupportedOperationException();
     }
 
 // #string_id_map#
@@ -1620,7 +1946,7 @@ public class NativeArray extends IdScriptableObject
     protected int findPrototypeId(String s)
     {
         int id;
-// #generated# Last update: 2005-09-26 15:47:42 EDT
+// #generated# Last update: 2015-02-24 17:45:09 PST
         L0: { id = 0; String X = null; int c;
             L: switch (s.length()) {
             case 3: c=s.charAt(0);
@@ -1630,6 +1956,7 @@ public class NativeArray extends IdScriptableObject
             case 4: switch (s.charAt(2)) {
                 case 'i': X="join";id=Id_join; break L;
                 case 'm': X="some";id=Id_some; break L;
+                case 'n': X="find";id=Id_find; break L;
                 case 'r': X="sort";id=Id_sort; break L;
                 case 's': X="push";id=Id_push; break L;
                 } break L;
@@ -1638,11 +1965,12 @@ public class NativeArray extends IdScriptableObject
                 else if (c=='l') { X="slice";id=Id_slice; }
                 else if (c=='v') { X="every";id=Id_every; }
                 break L;
-            case 6: c=s.charAt(0);
-                if (c=='c') { X="concat";id=Id_concat; }
-                else if (c=='f') { X="filter";id=Id_filter; }
-                else if (c=='s') { X="splice";id=Id_splice; }
-                break L;
+            case 6: switch (s.charAt(0)) {
+                case 'c': X="concat";id=Id_concat; break L;
+                case 'f': X="filter";id=Id_filter; break L;
+                case 'r': X="reduce";id=Id_reduce; break L;
+                case 's': X="splice";id=Id_splice; break L;
+                } break L;
             case 7: switch (s.charAt(0)) {
                 case 'f': X="forEach";id=Id_forEach; break L;
                 case 'i': X="indexOf";id=Id_indexOf; break L;
@@ -1653,18 +1981,21 @@ public class NativeArray extends IdScriptableObject
                 if (c=='o') { X="toSource";id=Id_toSource; }
                 else if (c=='t') { X="toString";id=Id_toString; }
                 break L;
+            case 9: X="findIndex";id=Id_findIndex; break L;
             case 11: c=s.charAt(0);
                 if (c=='c') { X="constructor";id=Id_constructor; }
                 else if (c=='l') { X="lastIndexOf";id=Id_lastIndexOf; }
+                else if (c=='r') { X="reduceRight";id=Id_reduceRight; }
                 break L;
             case 14: X="toLocaleString";id=Id_toLocaleString; break L;
             }
             if (X!=null && X!=s && !X.equals(s)) id = 0;
+            break L0;
         }
 // #/generated#
         return id;
     }
-    
+
     private static final int
         Id_constructor          = 1,
         Id_toString             = 2,
@@ -1687,11 +2018,16 @@ public class NativeArray extends IdScriptableObject
         Id_forEach              = 19,
         Id_map                  = 20,
         Id_some                 = 21,
+        Id_find                 = 22,
+        Id_findIndex            = 23,
+        Id_reduce               = 24,
+        Id_reduceRight          = 25,
 
-        MAX_PROTOTYPE_ID        = 21;
+
+        MAX_PROTOTYPE_ID        = 25;
 
 // #/string_id_map#
-    
+
     private static final int
         ConstructorId_join                 = -Id_join,
         ConstructorId_reverse              = -Id_reverse,
@@ -1709,12 +2045,22 @@ public class NativeArray extends IdScriptableObject
         ConstructorId_filter               = -Id_filter,
         ConstructorId_forEach              = -Id_forEach,
         ConstructorId_map                  = -Id_map,
-        ConstructorId_some                 = -Id_some;
+        ConstructorId_some                 = -Id_some,
+        ConstructorId_find                 = -Id_find,
+        ConstructorId_findIndex            = -Id_findIndex,
+        ConstructorId_reduce               = -Id_reduce,
+        ConstructorId_reduceRight          = -Id_reduceRight,
+        ConstructorId_isArray              = -26;
 
     /**
      * Internal representation of the JavaScript array's length property.
      */
     private long length;
+
+    /**
+     * Attributes of the array's length property
+     */
+    private int lengthAttr = DONTENUM | PERMANENT;
 
     /**
      * Fast storage for dense arrays. Sparse arrays will use the superclass's
